PlayerSession + SessionData (no longer use tags on bltool item)